# rspatial

./: ChangeLog_incant.txt  checkDep.R
sp/: .Rbuildignore  CHANGES  ChangeLog  DESCRIPTION  INDEX  NAMESPACE  TODO  cleanup  configure  configure.in  makefile
sp/R/: AAA.R  AttributeList-methods.R  CRS-methods.R  Class-CRS.R  Class-Spatial.R  Class-SpatialCell.R  Class-SpatialCellDataFrame.R  Class-SpatialData.R  Class-SpatialDataFramePolygons.R  Class-SpatialGrid.R  Class-SpatialGridDataFrame.R  Class-SpatialGridded.R  Class-SpatialGriddedDataFrame.R  Class-SpatialLines.R  Class-SpatialLinesDataFrame.R  Class-SpatialPoints.R  Class-SpatialPointsDataFrame.R  Class-SpatialRings.R  Class-SpatialRingsDataFrame.R  CoRS.R  GridTopology-methods.R  Spatial-methods.R  SpatialGrid-methods.R  SpatialGridDataFrame-methods.R  SpatialLines-methods.R  SpatialLinesDataFrame-methods.R  SpatialPoints-methods.R  SpatialPointsDataFrame-methods.R  SpatialPolygons-displayMethods.R  SpatialPolygons-methods.R  SpatialPolygonsDataFrame-methods.R  SpatialRings-displayMethods.R  SpatialRings-internals.R  SpatialRings-methods.R  SpatialRingsDataFrame-methods.R  aaa.R  asciigrid.R  bPolylist4.R  bubble.R  cplot.R  (+23 more)
sp/S/: AAA.q  Class-CRS.q  Class-SpatialData.q  Class-SpatialDataFramePolygons.q  asciigrid.q  bubble.q  image.SpatialDataFrameGrid.q  map.to.lev.q  mapasp.q  point.in.polygon.q  polylist-functions.q  select.spatial.q
sp/data/: 00Index  Rlogo.R  holepoly8.R  holepolys.R  layout.R  meuse.grid.rda  meuse.rda  meuse_interp_cL.R  ncMap.R  ncMap.rda
sp/demo/: gallery.R
sp/inst/: CITATION  (+1 more)
(+671 files in other folders)
